# qwen-opt-bench

./: .gitignore  README.md  pyproject.toml
.virtual_documents/notebooks/: optimizers_test.ipynb
bash/: full_reproduce.sh  run_adamw.sh  run_hybrid.sh  run_muon.sh
configs/: base.yaml  hybrid.yaml  muon.yaml
notebooks/: compare_results.ipynb  optimizers_test.ipynb
notebooks/.ipynb_checkpoints/: optimizers_test-checkpoint.ipynb
report/: report.aux  report.fdb_latexmk  report.fls  report.tex
scripts/: compare_results.py  evaluate.py  train.py
src/: build_optimizer.py  config.py  data.py  logger.py  model.py  seed.py  trainer.py
src/optimizers/: hybrid.py  muon.py
